# HeST

./: .gitignore  .gitignore.swp  .npy  Amherst_cell_debugging.ipynb  ExampleUsage.ipynb  HeST_basic_script.py  HeST_review_runs.py  Potential_Curves.ipynb  README.md  analysis_functions.py  analyzing_big_sweep.py  array_running.bat  dispersion_data.csv  dispersion_data.txt  many_params_run.py  optimization_runs.py  pyproject.toml  setup.py  unity_analysis.ipynb  velocity_data.csv
Example_notebooks/: HeST_QP_Sim.ipynb  HeST_Singlet_Sim.ipynb  Hest_basic.ipynb  Potential_Curves.ipynb
HeST/: Amherst_Example_Detector.py  Amherst_detector_fill_15_mm.py  Amherst_detector_fill_2_5_mm.py  Amherst_detector_fill_5_mm.py  Amherst_split_cpd.py  Amherst_split_cpd_with_numba.py  Detection.py  ExampleUsage.ipynb  HeST_Core.py  HeST_documentation.md  LBNL_Example_Detector.py  LCE_map_amherstExample_41x41x30_noReflections.npy  QP_map_amherstExample_41x41x30_noReflections.npy  WIMP_Generation.py  __init__.py  optimize_2_1.py  optimize_2_10.py  optimize_2_4.py  optimize_4_1.py  optimize_4_10.py  optimize_4_4.py  optimize_5_1.py  optimize_6_1.py  optimize_6_10.py  optimize_6_4.py  review_detector_big_setup.py  review_detector_mid_setup.py  review_detector_setup.py
HeST.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
analysis/: __init__.py  analysis_functions.py  make_data_averaged_template.ipynb  real_data_comparison.ipynb  unity_analysis.ipynb
data/: Double_pulse_amps.npy  further_zoom.npy  new_batch_pracrice.pkl  pracice_run.pkl  practice.pkl  zoom_in.npy  (+1 more)
(+65 files in other folders)
