[build-system]
requires = [
    "setuptools>=42",
    "numpy",
    "scipy"
]
build-backend = "setuptools.build_meta"

[project]
name = "HeST"
version = "0.0.1"
authors = [
  { name="Greg Rischbieter", email="rischbie@umich.edu" },
]
description = "A developmental python package for simulating LHe yields from energy deposits. Based on NEST's framework."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/spice-herald/HeST"
"Bug Tracker" = "https://github.com/spice-herald/HeST/issues"
